@@ -1489,7 +1489,7 @@ void FCEUI_MoviePlayFromBeginning(void)
 		if (currMovieData.savestate.empty())
 		{
 			movie_readonly=true;
-			poweron(true);	//Bad, this assumes a movie doesn't start from savestate
+			poweron(true);	
 			currFrameCounter=0;
 			movieMode = MOVIEMODE_PLAY;
 			FCEU_DispMessage("Movie is now Read-Only. Playing from beginning.",0);
